# crab-antiagiota

./: Cargo.toml  Dockerfile  Dockerfile.postgres  README.md  docker-compose.yml  index-and-query-options-pgvector.md  info.json  nginx.conf  testes-com-k6.md
.cargo/: config.toml
.github/workflows/: docker.yml
resources/: example-payloads.json  example-references.json  mcc-risk.json  schema.sql
src/: api.rs  fraud-detector.rs  lib.rs  main.rs  mccrisk.rs  normalization.rs  payload.rs  seed.rs  state.rs
